# chaos

./: .env.sample  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: coverage.yml  test.yml
docker/postgres/: 01-create-multiple-dbs.sh
docs/: README.md  architecture-audit.md  architecture.md  block-refined-notes.md  documentation-standard.md  functional-testing-plan-complete.md  github-actions-plan-complete.md  ideations.md  identity.md  llm-primitive-refined-notes.md  llm-primitive-refined.md  mvp-checklist-complete.md  phase2-checklist-complete.md  phase3-checklist-complete.md  storage-layout-plan-complete.md
docs/architecture/: index.md
docs/archive/: agent-flowchart.md  index.md  prompts.md  sop-agent-architecture.md
docs/dev/: index.md  litellm-postgresql-setup.md  llm-primitive-block-audit.md  llm-primitive-functional-test-plan.md  llm-primitive.md
docs/planning/: architecture-alignment-checklist.md  architecture-alignment-plan-complete.md  architecture-docs-migration-checklist.md  architecture-docs-migration-plan-complete.md  architecture-docs-restructure-checklist.md  architecture-docs-restructure-plan-complete.md  block-architecture-docs-expansion-checklist.md  block-architecture-docs-expansion-plan.md  block-estimation-checklist.md  block-estimation-plan.md  block-interface-checklist.md  block-interface-plan.md  block-runtime-implementation-checklist.md  block-runtime-implementation-plan.md  code-review-remediation-checklist.md  code-review-remediation-plan-complete.md  index.md  (+29 more)
scripts/: llm_primitive_demo.py  serve_docs.py
tests/: test_agent_context.py  test_cli.py  test_config.py  test_context_retriever.py  test_core_agent.py  test_domain_primitives.py  test_engine_basic_agent.py  test_identity.py  test_infra_coverage.py  test_infra_libs.py  test_infra_memory.py  test_library.py  test_memory_view.py  test_prompt_builder.py  test_raw_memory_store.py  test_skills_knowledge.py  test_tool_runner.py  test_tuning_policy.py
(+174 files in other folders)
