[project]
name = "chaos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "markdown>=3.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "vcrpy>=6.0.1",
]

[project.scripts]
chaos = "chaos.cli.main:app"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src/chaos"]
omit = ["tests/*"]
